...
                }
            } // End ScrollView

            // Comment Input
            HStack {
                TextField("Add a comment...", text: $commentText)
                    .accessibilityIdentifier("commentTextField")
                    .padding(10)
                    .background(Color(UIColor.systemGray6))
                    .cornerRadius(10)

                Button(action: {
                    commentViewModel.addComment(text: commentText, to: post.id.uuidString)
...
                }) {
                    Image(systemName: "paperplane.fill")
                        .foregroundColor(commentText.isEmpty ? .gray : .orange)
                        .padding(.leading, 5)
                }
                .disabled(commentText.isEmpty)
                .accessibilityIdentifier("addCommentButton")
            }
            .padding()
        }
        .padding()
        .onAppear {
            commentViewModel.fetchComments(for: post.id.uuidString)
...
